[gd_scene load_steps=8 format=3 uid="uid://0donue74ycyk"]

[ext_resource type="Script" path="res://assets/scripts/dalek.gd" id="1_acjio"]
[ext_resource type="ArrayMesh" uid="uid://bnueokcce36mj" path="res://assets/models/imports/Dalek_Cylinder.res" id="2_yx3a7"]
[ext_resource type="PackedScene" uid="uid://cgookivq886s1" path="res://assets/prefabs/gun.tscn" id="3_c86vl"]
[ext_resource type="Script" path="res://assets/scripts/debug_dalek.gd" id="4_554bn"]

[sub_resource type="Skin" id="Skin_jhx4l"]
resource_name = "Skin"
bind_count = 5
bind/0/name = &"Base"
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
bind/1/name = &"Head"
bind/1/bone = -1
bind/1/pose = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.06786, 0)
bind/2/name = &"Eye"
bind/2/bone = -1
bind/2/pose = Transform3D(0, -1, 7.54979e-08, 1, 0, 0, 0, 7.54979e-08, 1, 1.42105, -0.195899, -1.16258e-07)
bind/3/name = &"Arm.L"
bind/3/bone = -1
bind/3/pose = Transform3D(0.310019, -0.95073, -4.5396e-07, 0.95073, 0.310019, 2.41153e-07, -8.85354e-08, -5.06355e-07, 1, 0.708442, -0.559139, 0.200266)
bind/4/name = &"Arm.R"
bind/4/bone = -1
bind/4/pose = Transform3D(0.310019, -0.95073, -4.5396e-07, 0.95073, 0.310019, 2.41153e-07, -8.85354e-08, -5.06355e-07, 1, 0.708442, -0.559139, -0.202817)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dga62"]
height = 1.52545
radius = 0.558179

[sub_resource type="ImmediateMesh" id="ImmediateMesh_w8lq4"]

[node name="Dalek" type="CharacterBody3D" node_paths=PackedStringArray("gun", "head_bone", "eye_bone", "left_arm_bone", "right_arm_bone")]
collision_layer = 8
collision_mask = 13
script = ExtResource("1_acjio")
gun = NodePath("Dalek2/Armature/Skeleton3D/LeftArmBone/Gun")
head_bone = NodePath("Dalek2/Armature/Skeleton3D/HeadBone")
eye_bone = NodePath("Dalek2/Armature/Skeleton3D/EyeBone")
left_arm_bone = NodePath("Dalek2/Armature/Skeleton3D/LeftArmBone")
right_arm_bone = NodePath("Dalek2/Armature/Skeleton3D/RightArmBone")

[node name="Dalek2" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="Armature" type="Node3D" parent="Dalek2"]

[node name="Skeleton3D" type="Skeleton3D" parent="Dalek2/Armature"]
bones/0/name = "Base"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, 0, 0)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/0/scale = Vector3(1, 1, 1)
bones/1/name = "Head"
bones/1/parent = 0
bones/1/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06786, 0)
bones/1/enabled = true
bones/1/position = Vector3(0, 1.06786, 0)
bones/1/rotation = Quaternion(0.000474975, 0.000474975, 0.000474975, 0.989475)
bones/1/scale = Vector3(1, 1, 1)
bones/2/name = "Eye"
bones/2/parent = 1
bones/2/rest = Transform3D(0, 1, -3.55271e-15, -1, 0, 7.54979e-08, 7.54979e-08, -3.55271e-15, 1, 0.195899, 0.353197, 8.97165e-09)
bones/2/enabled = true
bones/2/position = Vector3(0.195899, 0.353197, 8.97165e-09)
bones/2/rotation = Quaternion(0.000474975, 0.000474975, -0.999525, 1.00048)
bones/2/scale = Vector3(1, 1, 1)
bones/3/name = "Arm.L"
bones/3/parent = 0
bones/3/rest = Transform3D(0.310019, 0.95073, -8.85354e-08, -0.95073, 0.310019, -5.06355e-07, -4.5396e-07, 2.41153e-07, 1, 0.31196, 0.846881, -0.200266)
bones/3/enabled = true
bones/3/position = Vector3(0.31196, 0.846881, -0.200266)
bones/3/rotation = Quaternion(0.000474975, 0.000474975, -0.999525, 1.00048)
bones/3/scale = Vector3(1, 1, 1)
bones/4/name = "Arm.R"
bones/4/parent = 0
bones/4/rest = Transform3D(0.310019, 0.95073, -8.85354e-08, -0.95073, 0.310019, -5.06355e-07, -4.5396e-07, 2.41153e-07, 1, 0.31196, 0.846881, 0.202818)
bones/4/enabled = true
bones/4/position = Vector3(0.31196, 0.846881, 0.202818)
bones/4/rotation = Quaternion(0.000474975, 0.000474975, -0.999525, 1.00048)
bones/4/scale = Vector3(1, 1, 1)

[node name="Dalek" type="MeshInstance3D" parent="Dalek2/Armature/Skeleton3D"]
mesh = ExtResource("2_yx3a7")
skin = SubResource("Skin_jhx4l")

[node name="HeadBone" type="BoneAttachment3D" parent="Dalek2/Armature/Skeleton3D"]
transform = Transform3D(0.999999, -0.000959592, 0.000960514, 0.000960514, 0.999999, -0.000959592, -0.000959592, 0.000960514, 0.999999, 0, 1.06786, 0)
bone_name = "Head"
bone_idx = 1
override_pose = true

[node name="EyeBone" type="BoneAttachment3D" parent="Dalek2/Armature/Skeleton3D"]
transform = Transform3D(0.00191366, 0.999998, 0.000961879, -0.999996, 0.0019155, -0.00190954, -0.00191138, -0.000958222, 0.999998, 0.19556, 1.42124, 0.000151277)
bone_name = "Eye"
bone_idx = 2

[node name="LeftArmBone" type="BoneAttachment3D" parent="Dalek2/Armature/Skeleton3D"]
transform = Transform3D(0.000949979, 1, 4.51226e-07, -0.999999, 0.000949979, -0.000949949, -0.000949949, 4.51226e-07, 1, 0.31196, 0.846881, -0.200266)
bone_name = "Arm.L"
bone_idx = 3
override_pose = true

[node name="Gun" parent="Dalek2/Armature/Skeleton3D/LeftArmBone" instance=ExtResource("3_c86vl")]
transform = Transform3D(1, -3.64028e-12, 0, 0, -4.3711e-08, -1, -2.03427e-11, 1, -4.37114e-08, 3.49283e-05, 0.512736, 7.45058e-08)

[node name="RightArmBone" type="BoneAttachment3D" parent="Dalek2/Armature/Skeleton3D"]
transform = Transform3D(0.000949979, 1, 4.51226e-07, -0.999999, 0.000949979, -0.000949949, -0.000949949, 4.51226e-07, 1, 0.31196, 0.846881, 0.202818)
bone_name = "Arm.R"
bone_idx = 4
override_pose = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0108414, 0.761636, 0.223885)
shape = SubResource("CylinderShape3D_dga62")

[node name="DebugDrawer" type="MeshInstance3D" parent="." node_paths=PackedStringArray("dalek")]
top_level = true
visible = false
mesh = SubResource("ImmediateMesh_w8lq4")
script = ExtResource("4_554bn")
dalek = NodePath("..")
